--- a/index.html
+++ b/index.html
@@ -3,122 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>ULTIMATE MATH X-O | PRO EDITION</title>
+    <title>ULTIMATE MATH X-O</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div id="setup-screen" class="app-screen">
-        <header class="hero-section">
-            <h1 class="logo-text">ULTIMATE <span>MATH</span></h1>
-            <p class="tagline">ادمُج ذكاء الـ X-O بقوة الرياضيات</p>
-        </header>
+        <div class="main-card">
+            <h1 style="text-align:center; color:var(--x-neon);">ULTIMATE MATH</h1>
+            
+            <div class="level-selector">
+                <button class="lvl-card active" data-lvl="level1">مستوى 1</button>
+                <button class="lvl-card" data-lvl="level2">مستوى 2</button>
+                <button class="lvl-card" data-lvl="level3">مستوى 3</button>
+                <button class="lvl-card" data-lvl="level4">مستوى 4</button>
+            </div>
 
-        <main class="setup-container">
-            <section class="config-section">
-                <h2 class="section-title">اختر مستوى التحدي</h2>
-                <div class="level-selector" id="level-picker">
-                    <button class="lvl-card active" data-lvl="level1">
-                        <span class="lvl-num">01</span>
-                        <div class="lvl-content">
-                            <span class="lvl-name">الكلاسيكي</span>
-                            <small>عمليات ضرب وقسمة مباشرة</small>
-                        </div>
-                    </button>
-                    <button class="lvl-card" data-lvl="level2">
-                        <span class="lvl-num">02</span>
-                        <div class="lvl-content">
-                            <span class="lvl-name">المجهول</span>
-                            <small>أوجد الرقمين المفقودين</small>
-                        </div>
-                    </button>
-                    <button class="lvl-card" data-lvl="level3">
-                        <span class="lvl-num">03</span>
-                        <div class="lvl-content">
-                            <span class="lvl-name">المزدوج</span>
-                            <small>استخرج أزواج الأرقام</small>
-                        </div>
-                    </button>
-                    <button class="lvl-card" data-lvl="level4">
-                        <span class="lvl-num">04</span>
-                        <div class="lvl-content">
-                            <span class="lvl-name">الميزان</span>
-                            <small>تحديات احترافية موزعة</small>
-                        </div>
-                    </button>
-                </div>
-            </section>
+            <div class="inputs-group">
+                <input type="text" id="p1-name" placeholder="اسم لاعب X">
+                <input type="text" id="p2-name" placeholder="اسم لاعب O">
+            </div>
 
-            <section class="teams-section">
-                <div class="team-input-group x-theme">
-                    <label>فريق X</label>
-                    <input type="text" id="p1-name" placeholder="أدخل اسم البطل..." maxlength="12">
-                </div>
-                <div class="vs-divider">VS</div>
-                <div class="team-input-group o-theme">
-                    <label>فريق O</label>
-                    <input type="text" id="p2-name" placeholder="أدخل اسم البطل..." maxlength="12">
-                </div>
-            </section>
-
-            <footer class="setup-footer">
-                <button type="button" class="btn-info" onclick="toggleManual(true)">📖 دليل القوانين</button>
-                <button type="button" id="start-game" class="btn-launch">بدء المهمة</button>
-            </footer>
-        </main>
+            <button id="start-game" class="btn-launch">بدء اللعبة</button>
+            <button onclick="toggleManual(true)" class="btn-info">القوانين</button>
+        </div>
     </div>
 
     <div id="game-screen" class="app-screen hidden">
-        </div>
+        <div id="game-container">
+            </div>
+    </div>
 
     <div id="math-overlay" class="overlay hidden">
         <div class="modal-calculator">
+            <div id="question-area"></div>
+            <div id="answer-slots" style="display:flex; gap:10px; justify-content:center;"></div>
+            <div id="numpad-grid" class="level-selector" style="grid-template-columns: repeat(3, 1fr);"></div>
+            <div class="calc-controls" style="display:flex; gap:10px;">
+                <button id="confirm-ans" class="btn-launch" style="flex:2">تأكيد</button>
+                <button id="clear-ans" class="btn-info" style="flex:1">C</button>
             </div>
+        </div>
     </div>
 
     <div id="manual-overlay" class="overlay hidden">
         <div class="modal-manual">
-            <header class="manual-header">
-                <h2>دليل اللعبة للمحترفين</h2>
-                <button class="close-btn" onclick="toggleManual(false)">&times;</button>
-            </header>
-            <div class="manual-body">
-                <section>
-                    <h3>💡 ما هي لعبة Ultimate X-O؟</h3>
-                    <p>ليست X-O عادية! هي عبارة عن لوحة كبيرة تحتوي على 9 لوحات صغيرة. للفوز باللعبة الكبرى، يجب أن تفوز بـ 3 لوحات صغيرة في صف واحد.</p>
-                                    </section>
-                
-                <section>
-                    <h3>🎯 قانون الإجبار (The Golden Rule)</h3>
-                    <p>حركتك داخل المربع الصغير تُحدد لخصمك في أي مربع كبير سيلعب لاحقاً. إذا لعبت في الزاوية اليمنى العليا للمربع الصغير، فسيُجبر خصمك على اللعب في المربع الكبير الموجود في الزاوية اليمنى العليا من اللوحة الكبرى.</p>
-                </section>
-
-                <section>
-                    <h3>🧮 حل المسائل الرياضية</h3>
-                    <ul>
-                        <li><strong>المستوى 1:</strong> حل العملية المباشرة وضع ناتجاً واحداً.</li>
-                        <li><strong>المستوى 2:</strong> ستظهر معادلة مجهولة الأطراف (? + ? = 10)، أدخل الرقمين الصحيحين.</li>
-                        <li><strong>المستوى 3:</strong> سنعطيك ناتجا، وعليك إدخال "الزوج" الصحيح الذي يؤدي لهذا الناتج.</li>
-                        <li><strong>المستوى 4:</strong> عمليات مركبة صعبة تتطلب تركيزاً ودقة.</li>
-                    </ul>
-                </section>
-            </div>
-            <button class="got-it-btn" onclick="toggleManual(false)">فهمت القوانين!</button>
+            <h2>قوانين اللعبة</h2>
+            <div id="manual-text" style="font-size: 0.9rem; line-height: 1.6;">
+                </div>
+            <button onclick="toggleManual(false)" class="btn-launch">فهمت</button>
         </div>
     </div>
 
-    <script src="levels.js/level1.js"></script>
-    <script src="levels.js/level2.js"></script>
-    <script src="levels.js/level3.js"></script>
-    <script src="levels.js/level4.js"></script>
+    <script src="levels/level1.js"></script>
+    <script src="levels/level2.js"></script>
+    <script src="levels/level3.js"></script>
+    <script src="levels/level4.js"></script>
     <script src="core.js"></script>
-
-    <script>
-        // دالة التحكم في إظهار وإخفاء نافذة القوانين
-        function toggleManual(show) {
-            const overlay = document.getElementById('manual-overlay');
-            overlay.classList.toggle('hidden', !show);
-        }
-    </script>
 </body>
 </html>
