--- a/index.html
+++ b/index.html
@@ -25,43 +25,68 @@
 
     <div id="app-content" class="hidden">
         <header class="game-header">
-    <h1 class="logo-ar">حسبتاك <span class="version-tag">PRO</span></h1>
-    <p class="subtitle-ar">حيث تلتقي الأرقام بالذكاء</p>
-</header>
+            <h1 class="logo-ar">حسبتاك <span class="version-tag">PRO</span></h1>
+            <p class="subtitle-ar">حيث تلتقي الأرقام بالذكاء</p>
+        </header>
 
-<div class="levels-grid">
-    <div class="plasma-card" onclick="selectLevel('level1', this)">
-        <div class="card-glow red-glow"></div>
-        <h2 class="lvl-number">01</h2>
-        <h3 class="lvl-title">الكلاسيكي</h3>
-        <p class="lvl-desc">سرعة بديهة وضرب مباشر</p>
-    </div>
+        <div class="levels-grid">
+            <div class="plasma-card" onclick="selectLevel('level1', this)">
+                <div class="card-glow red-glow"></div>
+                <h2 class="lvl-number">01</h2>
+                <h3 class="lvl-title">الكلاسيكي</h3>
+                <p class="lvl-desc">سرعة بديهة وضرب مباشر</p>
+            </div>
 
-    <div class="plasma-card" onclick="selectLevel('level2', this)">
-        <div class="card-glow blue-glow"></div>
-        <h2 class="lvl-number">02</h2>
-        <h3 class="lvl-title">المجهول</h3>
-        <p class="lvl-desc">أوجد الأرقام المفقودة</p>
-    </div>
+            <div class="plasma-card" onclick="selectLevel('level2', this)">
+                <div class="card-glow blue-glow"></div>
+                <h2 class="lvl-number">02</h2>
+                <h3 class="lvl-title">المجهول</h3>
+                <p class="lvl-desc">أوجد الأرقام المفقودة</p>
+            </div>
 
-    <div class="plasma-card" onclick="selectLevel('level3', this)">
-        <div class="card-glow purple-glow"></div>
-        <h2 class="lvl-number">03</h2>
-        <h3 class="lvl-title">الزوجي</h3>
-        <p class="lvl-desc">اكتشف الثنائيات الصحيحة</p>
-    </div>
+            <div class="plasma-card" onclick="selectLevel('level3', this)">
+                <div class="card-glow purple-glow"></div>
+                <h2 class="lvl-number">03</h2>
+                <h3 class="lvl-title">الزوجي</h3>
+                <p class="lvl-desc">اكتشف الثنائيات الصحيحة</p>
+            </div>
 
-    <div class="plasma-card" onclick="selectLevel('level4', this)">
-        <div class="card-glow gold-glow"></div>
-        <h2 class="lvl-number">04</h2>
-        <h3 class="lvl-title">التحدي</h3>
-        <p class="lvl-desc">اختبار النخبة الشامل</p>
-    </div>
-</div>
-
-<div class="action-area">
-    <button id="btn-start-game" class="btn-plasma hidden" onclick="App.launchGame()">بدء المهمة</button>
+            <div class="plasma-card" onclick="selectLevel('level4', this)">
+                <div class="card-glow gold-glow"></div>
+                <h2 class="lvl-number">04</h2>
+                <h3 class="lvl-title">التحدي</h3>
+                <p class="lvl-desc">اختبار النخبة الشامل</p>
+            </div>
         </div>
+
+        <div class="action-area">
+            <button id="btn-start-game" class="btn-plasma hidden" onclick="App.launchGame()">بدء المهمة</button>
+        </div>
+    </div> 
+    <div id="battle-setup" class="full-screen-layer hidden">
+        <div class="glass-card setup-box">
+            <h2 class="plasma-text" style="font-size: 2rem; margin-bottom: 30px;">تجهيز المعركة</h2>
+            
+            <div class="players-row">
+                <div class="player-group group-x">
+                    <div class="icon-avatar x-avatar">X</div>
+                    <input type="text" id="p1-name" class="plasma-input x-input" placeholder="اسم القائد X" value="اللاعب 1">
+                </div>
+
+                <div class="vs-text">VS</div>
+
+                <div class="player-group group-o">
+                    <div class="icon-avatar o-avatar">O</div>
+                    <input type="text" id="p2-name" class="plasma-input o-input" placeholder="اسم القائد O" value="اللاعب 2">
+                </div>
+            </div>
+
+            <div class="setup-actions">
+                <button class="btn-plasma" onclick="App.startMatch()">اشتباك!</button>
+                <button class="btn-cancel" onclick="App.hideSetup()">تراجع</button>
+            </div>
+        </div>
+    </div>
 
     <script src="core.js"></script>
 </body>
