--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             
             <div class="login-box">
-                <label class="mech-label">أدخل رمز الوصول</label>
+                <label class="mech-label">أدخل الكود</label>
                 <input type="password" id="pin-input" class="clay-input" maxlength="8" placeholder="••••••••" inputmode="numeric">
                 <button id="btn-login" class="mech-btn primary block">تحقق من الهوية</button>
             </div>
