--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </div>
             
             <div class="login-box">
-                <label class="mech-label">أدخل الكود</label>
+                <label class="mech-label"></label>
                 <input type="password" id="pin-input" class="clay-input" maxlength="8" placeholder="••••••••" inputmode="numeric">
-                <button id="btn-login" class="mech-btn primary block">تحقق من الهوية</button>
+                <button id="btn-login" class="mech-btn primary block">ادخل الكود واضغط هنا</button>
             </div>
             <p id="login-msg" class="status-msg"></p>
         </section>
